# xsmith

./: .env.example  Dockerfile.runner  README.md  pyproject.toml
notebooks/: walkthrough.ipynb
src/xsmith/: __init__.py  cli.py  config.py
src/xsmith/agents/: base.py  generator.py  isolation.py  prompts.py  scorer.py  test_generator.py  tools.py
src/xsmith/benchmarks/: base.py  repo_explore.py  testgeneval.py
src/xsmith/domain/: budget.py  candidate.py  coverage.py  evaluation.py  goal.py  plan.py  progress.py  target.py  test_case.py
src/xsmith/execution/: coverage_adapter.py  coverage_parser.py  docker.py  docker_runner.py  evaluator.py  runner.py  subprocess.py  subprocess_runner.py
src/xsmith/exploration/: explorer.py
src/xsmith/results/: schema.py  writer.py
src/xsmith/strategies/: base.py  cov_qvalue.py  qvalue.py
tests/integration/: test_real_sdk_subprocess.py
tests/unit/: test_agents.py  test_coverage_adapter.py  test_coverage_map.py  test_coverage_parser.py  test_exploration_loop.py  test_explorer.py  test_isolation.py  test_progress.py  test_qvalue_math.py  test_schemas.py  test_strategy.py  test_subprocess_evaluator.py  test_subprocess_runner.py
